--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Roboto:wght@300;400;500;700&display=swap');
-$fontLato :'Lato', sans-serif; 
-$fontRoboto : 'Roboto', sans-serif;
+@import 'base/polices';
+@import 'base/colors';
 
 .container {
-    // background-color: rgb(247, 241, 241);
     height: 500px;
     .header {
         margin-top: 4%;
@@ -17,150 +15,15 @@ $fontRoboto : 'Roboto', sans-serif;
             text-align: center;
         }
     }
-    .form {
-        margin-top: 4%;
-        position: relative;
-        &-search {
-            background-color: #E7E7E7;   
-            height: 69px; 
-            border: none; 
-        }
-        &-search:focus {
-            background-color: #E7E7E7;   
-            border: none; 
-            box-shadow: none;
-        }
-        &-btnSubmit {
-            position: absolute;
-            right: 0;
-            height: 100%;
-            border: none;
-            background-color:  #E7E7E7;
-        }
-    }
-
-    .filters {
-        display: flex;
-        margin-top: 3%;
-        .filter {
-            margin-right: 3%;
-            min-width: 170px;
-            min-height: 69px;
-            width: 170px;
-            display: flex;
-            border-radius: 5px;
-            position: relative;
-            input {
-                background-color: transparent;
-                color: white;
-                &::placeholder {
-                    color: white;
-                    font-weight: 500;
-                }
-            }
-            
-            .form-control:focus {
-                border: none;
-                box-shadow: none;
-            }
-    
-            &-btn {
-                position: absolute;
-                right: 15px;
-                bottom: 0;
-                top: 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                i {
-                    color: white;
-                }
-            }
-        }
-    
-        .filter-ingredients {
-            background-color: #3282F7;
-        }
-        .filter-appareil {
-            background-color: #68D9A4;
-        }
-        .filter-ustensiles {
-            background-color: #ED6454;
-        }
-    }
-
+    @import 'components/form';
+    @import 'components/filters';
 
     .listCard {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        .card {
-            width: 380px;
-            height: auto;
-            background-color:#E7E7E7;            ;
-            padding: 0;
-            margin-top: 2em;
-            border: none;
-            &-img {
-                width: 100%;
-                height: 178px;
-                background-color: #C7BEBE
-                ;
-            }
-            &-body {
-
-            }
-
-            &-title, &-time, &-ingredients {
-                font-family: $fontLato;
-            }
-
-            &-title, &-time {
-                font-size: 1em;
-            }
-
-            &-description, &-ingredients {
-                font-size: 0.7em;
-            }
-
-            &-time, &-ingredients_name {
-                font-weight: bold;
-            }
-
-            &-ingredients {
-                height: 100px;
-                li {
-                    list-style-type: none;
-                }
-            }
-
-            &-time {
-                text-align: end;
-            }
-
-            &-description {
-                height: 100px;
-                overflow: hidden;
-            }
-           
-        }
-    }
-}
-
-
-@media only screen and (max-width: 1383px) and (min-width: 800px) {
-    .container {
-        .listCard {
-            .card {
-                width: 45%;
-                &-description, &-ingredients {
-                    font-size: 0.8em;
-                }
-                &-ingredients {
-                    height: auto;
-                }
-            }
-        }
+        @import 'components/card' ;
+       
     }
 }
 
@@ -168,18 +31,6 @@ $fontRoboto : 'Roboto', sans-serif;
     .container {
         .listCard {
             justify-content: center;
-            .card {
-                width: 100%;
-                &-description, &-ingredients {
-                    font-size: 0.8em;
-                }
-                &-ingredients {
-                    height: auto;
-                }
-                &-time {
-                    text-align: start;
-                }
-            }
         }
     }
 }
