--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -12,6 +12,7 @@
         input {
             background-color: transparent;
             color: white;
+            border: none;
             &::placeholder {
                 color: white;
                 font-weight: 500;
