--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,7 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+        padding-bottom: 5%;
         @import 'components/card' ;
        
     }
