refacto class create card recipe

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -34,7 +34,7 @@
             list-style-type: none;
         }
         &_name::after {
-            content: " : "
+            // content: " : "
         }
     }
 
