--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,7 @@
         }
     }
     @import 'components/form';
+    @import 'components/tag';
     @import 'components/filters';
 
     .listCard {
