--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -42,6 +42,7 @@
             transition: max-width .3s;
             border: none;
             li {
+                display: none;
                 min-width: 33%;
                 max-width: 100%;
                 button {
@@ -50,6 +51,9 @@
                 button:hover {
                     background-color: rgba($color: #000000, $alpha: 0.5);
                 }
+            }
+            .active {
+                display: block;
             }
         }
         &-btn {
