--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -9,7 +9,7 @@
         border-radius: 5px;
         position: relative;
         flex-direction: column;
-        transition: width .3s;
+        transition: max-width .3s ease-in-out;
         input {
             background-color: transparent;
             color: white;
@@ -41,7 +41,17 @@
             background-color: transparent;
             transition: max-width .3s;
             border: none;
+            .dropdown-item {
+                width: auto;
+                &:active {
+                    background-color: transparent;
+                }
+            }
+            .dropdown-item.active {
+                    background-color: transparent;
+            }
             li {
+                display: none;
                 min-width: 33%;
                 max-width: 100%;
                 button {
@@ -50,6 +60,9 @@
                 button:hover {
                     background-color: rgba($color: #000000, $alpha: 0.5);
                 }
+            }
+            .active {
+                display: block;
             }
         }
         &-btn {
