--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -3,27 +3,68 @@
     margin-top: 3%;
     .filter {
         margin-right: 3%;
-        min-width: auto;
-        min-height: 69px;
-        width: 170px;
+        max-width: 170px;
+        height: 69px;
         display: flex;
         border-radius: 5px;
         position: relative;
+        flex-direction: column;
+        transition: max-width .3s ease-in-out;
         input {
             background-color: transparent;
             color: white;
             border: none;
+            text-align: start;
+            min-width: 170px;
+            max-width: auto;
+            height: 69px;
+            display: block;
+          
             &::placeholder {
                 color: white;
                 font-weight: 500;
             }
         }
+
         
         .form-control:focus {
             border: none;
             box-shadow: none;
         }
 
+        ul {
+            top: 69px;
+            position: static;
+            flex-direction: row;
+            flex-wrap: wrap;
+            max-width: 667px;
+            background-color: transparent;
+            transition: max-width .3s;
+            border: none;
+            .dropdown-item {
+                width: auto;
+                &:active {
+                    background-color: transparent;
+                }
+            }
+            .dropdown-item.active {
+                    background-color: transparent;
+            }
+            li {
+                display: none;
+                min-width: 33%;
+                max-width: 100%;
+                button {
+                    color: white;
+                }
+                button:hover {
+                    background-color: rgba($color: #000000, $alpha: 0.5);
+                }
+            }
+            .active {
+                display: block;
+            }
+        }
         &-btn {
             position: absolute;
             right: 15px;
@@ -32,9 +73,25 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            pointer-events: none;
+            height: 69px;
             i {
                 color: white;
+                transform: rotate(0deg);
+
             }
+        }
+    }
+
+    .filter.active {
+        width: auto;
+        min-width: 250px;
+        max-width: 667px;
+        height: auto;
+        transition: max-width .3s ease-in-out;
+        .filter-btn {
+            transform: rotate(180deg);
+            transition: transform .3s ease-in-out;
         }
     }
 
