--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+  
 @import 'base/polices';
 @import 'base/colors';
 
@@ -16,6 +17,7 @@
         }
     }
     @import 'components/form';
+    @import 'components/tag';
     @import 'components/filters';
 
     .listCard {
